--- a/index.html
+++ b/index.html
@@ -246,10 +246,7 @@
 							Site vitrine réalisé avec Wordpress pour un domaine possédant des gîtes et des chambres d'hôtes
 						  </div>
 						  <div class="mdl-card__actions mdl-card--border">
-							<a href="http://www.lecocondecurson.fr/" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-							  Voir Page
-							</a>
-							<div class="year"><span>2014 - Aujourd'hui</span></div>
+							<div class="year"><span>2014 - 2020</span></div>
 						  </div>
 						</div>
 						<div class="mdl-card mdl-shadow--4dp">
