Correction de la timeline

--- a/index.html
+++ b/index.html
@@ -97,29 +97,31 @@
 			<div class="section colored">
 				<div class="divider"></div>
 				<div class="heading">
-				   <h2 class="white">FORMATION & ÉXPERIENCES</h2>
-				   <div class="divTimeline">
-					   <ul class="timeline">
-
-                     <li class="topLir">
-                        <div class="direction-r">
-                           <div class="flag-wrapper">
-                              <div class="flag">
-                                 <span class="spanTitle"><img alt=""  src="img/vidal.jpg" height="30" style="margin-right: 5px;"/>VIDAL</span><br>
-                                 <span class="desc">Développeur Web Full-Stack</span>
-                              </div>
-                              <span class="time-wrapper"><span class="time">septembre 2017 – aujourd’hui</span></span>
-                           </div>
-                        </div>
-                     </li>
-							<li>
+					<h2 class="white">FORMATION & ÉXPERIENCES</h2>
+					<div class="divTimeline">
+						<ul class="timeline">
+							<li class="topLir">
+								<div class="direction-r">
+									<div class="flag-wrapper">
+										<div class="flag">
+											<span class="spanTitle"><img alt="" src="img/vidal.jpg" height="30"
+																		 style="margin-right: 5px;"/>VIDAL</span><br>
+											<span class="desc">Développeur Web Full-Stack</span>
+										</div>
+										<span class="time-wrapper"><span
+												class="time">septembre 2017 – aujourd’hui</span></span>
+									</div>
+								</div>
+							</li>
+							<li class="on-same-line">
 								<div class="direction-l">
 									<div class="flag-wrapper">
 										<div class="flag topFlagl">
-											<span class="spanTitle"><img alt=""  src="img/galilee.png" height="33" />École d'Ingénieur Sup'Galilée</span><br>
+											<span class="spanTitle"><img alt="" src="img/galilee.png" height="33"/>École d'Ingénieur Sup'Galilée</span><br>
 											<span class="desc">Diplôme d'ingénieur Informatique & Réseaux en apprentissage</span>
 										</div>
-										<span class="time-wrapper"><span class="time">septembre 2014 – septembre 2017</span></span>
+										<span class="time-wrapper"><span
+												class="time">septembre 2014 – septembre 2017</span></span>
 									</div>
 								</div>
 							</li>
@@ -127,10 +129,11 @@
 								<div class="direction-r">
 									<div class="flag-wrapper">
 										<div class="flag">
-											<span class="spanTitle"><img alt=""  src="img/foncia.png" height="33" />Foncia Groupe</span><br>
+											<span class="spanTitle"><img alt="" src="img/foncia.png" height="33"/>Foncia Groupe</span><br>
 											<span class="desc">Développeur Web Java</span>
 										</div>
-										<span class="time-wrapper"><span class="time">septembre 2014 – aujourd’hui</span></span>
+										<span class="time-wrapper"><span
+												class="time">septembre 2014 – septembre 2017</span></span>
 									</div>
 								</div>
 							</li>
@@ -138,18 +141,18 @@
 								<div class="direction-r">
 									<div class="flag-wrapper">
 										<div class="flag">
-											<span class="spanTitle"><img alt=""  src="img/foncia.png" height="33" />Foncia Groupe</span><br>
+											<span class="spanTitle"><img alt="" src="img/foncia.png" height="33"/>Foncia Groupe</span><br>
 											<span class="desc">Développeur Web Php</span>
 										</div>
 										<span class="time-wrapper"><span class="time">septembre 2013 – août 2014 </span></span>
 									</div>
 								</div>
 							</li>
-							<li>
+							<li class="on-same-line">
 								<div class="direction-l">
 									<div class="flag-wrapper">
 										<div class="flag">
-											<span class="spanTitle"><img alt=""  src="img/logo.png" height="33" />Iut Villetaneuse</span><br>
+											<span class="spanTitle"><img alt="" src="img/logo.png" height="33"/>Iut Villetaneuse</span><br>
 											<span class="desc">DUT Informatique en apprentissage</span>
 										</div>
 										<span class="time-wrapper"><span class="time">septembre 2012 – août 2014 </span></span>
@@ -160,7 +163,7 @@
 								<div class="direction-r">
 									<div class="flag-wrapper">
 										<div class="flag">
-											<span class="spanTitle"><img alt=""  src="img/foncia.png" height="33" />Foncia Groupe</span><br>
+											<span class="spanTitle"><img alt="" src="img/foncia.png" height="33"/>Foncia Groupe</span><br>
 											<span class="desc">Administrateur Système</span>
 										</div>
 										<span class="time-wrapper"><span class="time">septembre 2012 - août 2013</span></span>
