--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							</div>
 							<div id="verticalLigne1" style="left:auto;margin: 0px auto;display: block;position:static;" class="verticalBlueLigne"></div>
 							<p id="aboutMeinfo" class="cadreBlue">
-                        Passionné depuis plus de 7 ans, je parcours sans cesse les différents horizons que m’offre l’informatique tels que le mobile, les jeux vidéo ou encore le web.
+								Passionné depuis <span id="years-of-experience"></span> ans, je parcours sans cesse les différents horizons que m’offre l’informatique tels que le mobile, les jeux vidéo ou encore le web.
                         Lorsqu’une idée d’application me vient en tête, je n’hésite jamais à la réaliser sur mon temps libre en me confrontant à une nouvelle technologie en vogue.
                         J’ai dans ma carrière, eu la chance de pouvoir assister à des conférences telles que Devoxx France ou Codeurs En Seine. Je me tiens également à jour en visionnant de moi-même des conférences en ligne ou en participant à des événements les soirs de semaine.<br><br>
                         Je suis actuellement Développeur Full-Stack orienté Web avec un fort attrait pour les technologies Front-end. Je suis parfaitement capable de travailler en équipe dans un environnement agile et être force de proposition.
