Maj des bulles de compétences

--- a/index.html
+++ b/index.html
@@ -174,26 +174,38 @@
 					</div>
 				</div>
 			</div>
+
+
 			<div class="section">
 				<div class="divider"></div>
 				<div class="heading">
-				   <h2 class="blue">COMPÉTENCES</h2>
+					<h2 class="blue">COMPÉTENCES</h2>
 					<dl class="skills-diagram">
-                  <dt class="skill-10">Java</dt><dd></dd>
-                  <dt class="skill-4">Symfony2</dt><dd></dd>
-                  <dt class="skill-9">AngularJs</dt><dd></dd>
-                  <dt class="skill-8">HTML/CSS</dt><dd></dd>
-                  <dt class="skill-8">Jasmine</dt><dd></dd>
-                  <dt class="skill-3 small-text">Cucumber</dt><dd></dd>
-                  <dt class="skill-10">Angular</dt><dd></dd>
-                  <dt class="skill-7">SQL</dt><dd></dd>
-                  <dt class="skill-8">Mockito</dt><dd></dd>
-                  <dt class="skill-7">MongoDb</dt><dd></dd>
-                  <dt class="skill-4 small-text">ElasticSearch</dt><dd></dd>
-                  <dt class="skill-6">Wordpress</dt><dd></dd>
-                  <dt class="skill-4">Unity</dt><dd></dd>
-                  <dt class="skill-8">JUnit</dt><dd></dd>
-                  <dt class="skill-7">Git</dt><dd></dd>
+						<dt class="skill-10">Java</dt><dd></dd>
+						<dt class="skill-4">Symfony2</dt><dd></dd>
+						<dt class="skill-3">VertX</dt><dd></dd>
+						<dt class="skill-7">TDD</dt><dd></dd>
+						<dt class="skill-4">AngularJs</dt><dd></dd>
+						<dt class="skill-5">React</dt><dd></dd>
+						<dt class="skill-8">HTML/CSS</dt><dd></dd>
+						<dt class="skill-3">Vue.js</dt><dd></dd>
+						<dt class="skill-8">AssertJ</dt><dd></dd>
+						<dt class="skill-7">Jasmine</dt><dd></dd>
+						<dt class="skill-3 small-text">Cucumber</dt><dd></dd>
+						<dt class="skill-10">Angular</dt><dd></dd>
+						<dt class="skill-7">SQL</dt><dd></dd>
+						<dt class="skill-8">Mockito</dt><dd></dd>
+						<dt class="skill-6">Docker</dt><dd></dd>
+						<dt class="skill-7">Jest</dt><dd></dd>
+						<dt class="skill-6">Gradle</dt><dd></dd>
+						<dt class="skill-4">Maven</dt><dd></dd>
+						<dt class="skill-4">RabbitMQ</dt><dd></dd>
+						<dt class="skill-7">MongoDb</dt><dd></dd>
+						<dt class="skill-9">Intellij</dt><dd></dd>
+						<dt class="skill-8">JUnit</dt><dd></dd>
+						<dt class="skill-4">Jenkins</dt><dd></dd>
+						<dt class="skill-7">Git</dt><dd></dd>
+						<dt class="skill-7 small-text">PairProgramming</dt><dd></dd>
 					</dl>
 				</div>
 			</div>
