--- a/index.html
+++ b/index.html
@@ -233,6 +233,9 @@
 							Jeu de reflexion pour Android réalisé avec Unity.
 						  </div>
 						  <div class="mdl-card__actions mdl-card--border">
+						  	<a href="https://play.google.com/store/apps/details?id=com.gle.colorline" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+							  Voir Page
+							</a>
 							<div class="year"><span>2016 - 2017</span></div>
 						  </div>
 						</div>
