Ajout d'un lien vers le gif du poc idle game

--- a/index.html
+++ b/index.html
@@ -222,6 +222,9 @@
                                 Poc d'un jeu incrémental réalisé avec Game Maker Studio 2.
                             </div>
                             <div class="mdl-card__actions mdl-card--border">
+								<a href="img/gameMaker.gif" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+									Voir Vidéo
+								</a>
                                 <div class="year"><span>2020</span></div>
                             </div>
                         </div>
