Mise à jour du site et CV

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<div class="welcome-message">
 				   <div class="heading">
 					  <p>GRÉGOIRE LE CUN</p>
-					  <p class="small">Dévelopeur Web Full-Stack <i class="fa fa-at"></i> VIDAL</p>
+					  <p class="small">Dévelopeur Web Full-Stack <i class="fa fa-at"></i> Malt</p>
 				   </div>
 				   <a href="#aboutMe" class="borderBtnBlue">VOIR PLUS</a>
 				</div>
@@ -82,9 +82,12 @@
 							<div id="verticalLigne1" style="left:auto;margin: 0px auto;display: block;position:static;" class="verticalBlueLigne"></div>
 							<p id="aboutMeinfo" class="cadreBlue">
 								Passionné depuis <span id="years-of-experience"></span> ans, je parcours sans cesse les différents horizons que m’offre l’informatique tels que le mobile, les jeux vidéo ou encore le web.
-                        Lorsqu’une idée d’application me vient en tête, je n’hésite jamais à la réaliser sur mon temps libre en me confrontant à une nouvelle technologie en vogue.
-                        J’ai dans ma carrière, eu la chance de pouvoir assister à des conférences telles que Devoxx France ou Codeurs En Seine. Je me tiens également à jour en visionnant de moi-même des conférences en ligne ou en participant à des événements les soirs de semaine.<br><br>
-                        Je suis actuellement Développeur Full-Stack orienté Web avec un fort attrait pour les technologies Front-end. Je suis parfaitement capable de travailler en équipe dans un environnement agile et être force de proposition.
+								<br/>
+								Lorsqu’une idée d’application me vient en tête, je n’hésite jamais à la réaliser sur mon temps libre en me confrontant à une nouvelle technologie en vogue.
+								<br/>
+								J’ai dans ma carrière, eu la chance de pouvoir assister à des conférences telles que Devoxx France, Codeurs En Seine ou Malt Tech Days. Je me tiens également à jour en visionnant de moi-même des conférences en ligne.
+								<br/>
+								Je suis un Développeur Full-Stack orienté Web avec un fort attrait pour les technologies Front-end. Je suis tout à fait apte à travailler en équipe, à être force de proposition, et à communiquer en anglais au sein d'un contexte international.
 							</p>
 							<div id="verticalLigne2" style="margin: 0px auto;display: block;" class="verticalBlueLigne"></div>
 							<a id="butCv" href="cv/cv_greg.xml" style="display:inline-block;" class="borderBtnWhite">Voir CV</a>
@@ -102,12 +105,25 @@
 								<div class="direction-r">
 									<div class="flag-wrapper">
 										<div class="flag">
-											<span class="spanTitle"><img alt="" src="img/vidal.jpg" height="30"
-																		 style="margin-right: 5px;"/>VIDAL</span><br>
+											<span class="spanTitle"><img alt="" src="img/malt.png" height="22"
+																		 style="margin-right: 5px;"/>Malt</span><br>
+											<span class="desc">Développeur Web Front-End</span>
+										</div>
+										<span class="time-wrapper"><span
+												class="time">Février 2022 – aujourd’hui</span></span>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="direction-r">
+									<div class="flag-wrapper">
+										<div class="flag">
+												<span class="spanTitle"><img alt="" src="img/vidal.jpg" height="30"
+																			 style="margin-right: 5px;"/>VIDAL</span><br>
 											<span class="desc">Développeur Web Full-Stack</span>
 										</div>
 										<span class="time-wrapper"><span
-												class="time">septembre 2017 – aujourd’hui</span></span>
+												class="time">septembre 2017 – Février 2022</span></span>
 									</div>
 								</div>
 							</li>
@@ -181,29 +197,25 @@
 					<dl class="skills-diagram">
 						<dt class="skill-10">Java</dt><dd></dd>
 						<dt class="skill-4">Symfony2</dt><dd></dd>
-						<dt class="skill-3">VertX</dt><dd></dd>
+						<dt class="skill-9">Nuxt</dt><dd></dd>
 						<dt class="skill-7">TDD</dt><dd></dd>
-						<dt class="skill-4">AngularJs</dt><dd></dd>
 						<dt class="skill-5">React</dt><dd></dd>
 						<dt class="skill-8">HTML/CSS</dt><dd></dd>
-						<dt class="skill-3">Vue.js</dt><dd></dd>
-						<dt class="skill-8">AssertJ</dt><dd></dd>
-						<dt class="skill-7">Jasmine</dt><dd></dd>
-						<dt class="skill-3 small-text">Cucumber</dt><dd></dd>
-						<dt class="skill-10">Angular</dt><dd></dd>
+						<dt class="skill-10">Vue.js</dt><dd></dd>
+						<dt class="skill-7">AssertJ</dt><dd></dd>
+						<dt class="skill-4">Jasmine</dt><dd></dd>
+						<dt class="skill-7">Angular</dt><dd></dd>
 						<dt class="skill-7">SQL</dt><dd></dd>
 						<dt class="skill-8">Mockito</dt><dd></dd>
 						<dt class="skill-6">Docker</dt><dd></dd>
 						<dt class="skill-7">Jest</dt><dd></dd>
 						<dt class="skill-6">Gradle</dt><dd></dd>
-						<dt class="skill-4">Maven</dt><dd></dd>
 						<dt class="skill-4">RabbitMQ</dt><dd></dd>
 						<dt class="skill-7">MongoDb</dt><dd></dd>
 						<dt class="skill-9">Intellij</dt><dd></dd>
 						<dt class="skill-8">JUnit</dt><dd></dd>
-						<dt class="skill-4">Jenkins</dt><dd></dd>
-						<dt class="skill-7">Git</dt><dd></dd>
-						<dt class="skill-7 small-text">PairProgramming</dt><dd></dd>
+						<dt class="skill-8">Git</dt><dd></dd>
+						<dt class="skill-7 small-text">Pair Programming</dt><dd></dd>
 					</dl>
 				</div>
 			</div>
@@ -405,7 +417,7 @@
 					<div class="divRight">
 						<i class="fa faContact fa-map-marker"></i> Eaubonne <br>
 						<i class="fa faContact fa-globe"></i> http://glecun.fr <br>
-						<i class="fa faContact fa-envelope-o"></i> gregoire.lecun@free.fr <br>
+						<i class="fa faContact fa-envelope-o"></i> gregoire.lecun@gmail.com <br>
 						<i class="fa faContact fa-linkedin-square"></i> <a class="social" href="https://fr.linkedin.com/pub/grégoire-le-cun/ab/298/2a4"> Lien </a>
 					</div>
 				</div>
