--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" >
 
-		<script type="text/javascript"  src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+		<script type="text/javascript"  src="import/jquery-1.11.3.min.js"></script>
 		<!-- google md -->
-		<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.light_blue-blue.min.css">
-		<script defer type="text/javascript" src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+		<link rel="stylesheet" href="import/material.light_blue-blue.min.css">
+		<script defer type="text/javascript" src="import/material.min.js"></script>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<!-- Jquery UI -->
 		<script type="text/javascript" src="import/jquery-ui.min.js"></script>
